--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 
 </head>
-<body>
+<body class="bg">
 
     <h1>Sons do site da Clarinha </h1>
 
