--- a/clara3trioficial-main/index.html
+++ b/clara3trioficial-main/index.html
@@ -18,25 +18,25 @@
 </head>
 <body class="bg">
 
-    <h1>Passarinhos </h1>
+    <h1>Sons do site da Clarinha </h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Bemtevi</button>
-        <button class="tecla tecla_clap">Canário</button>
-        <button class="tecla tecla_tim">Pardal</button>
+        <button class="tecla tecla_pom">Pom</button>
+        <button class="tecla tecla_clap">Clap</button>
+        <button class="tecla tecla_tim">Tim</button>
 
-        <button class="tecla tecla_puff">Calopsita</button>
-        <button class="tecla tecla_splash">Sabiá</button>
-        <button class="tecla tecla_toim">Arara</button>
+        <button class="tecla tecla_puff">Puff</button>
+        <button class="tecla tecla_splash">Splash</button>
+        <button class="tecla tecla_toim">Toim</button>
 
-        <button class="tecla tecla_psh">Papagaio</button>
-        <button class="tecla tecla_tic">Pica-Pau</button>
-        <button class="tecla tecla_tom">Stop</button>
+        <button class="tecla tecla_psh">Psh</button>
+        <button class="tecla tecla_tic">Tic</button>
+        <button class="tecla tecla_tom">Tom</button>
     </section>
 
-    <audio src="sounds/bemtevi.mp3" id="som_tecla_pom"></audio>
-    <audio src="sounds/canarinho.mp3" id="som_tecla_clap"></audio>
-    <audio src="sounds/pardal.mp3" id="som_tecla_tim"></audio>
+    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
+    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
     <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
     <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
