--- a/clara3trioficial-main/clara3trioficial-main/index.html
+++ b/clara3trioficial-main/clara3trioficial-main/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Alura MIDI</title>
+    <title> By: Clara</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,31 +18,31 @@
 </head>
 <body class="bg">
 
-    <h1>Passarinhos </h1>
+    <h1> Canto dos passárinhos </h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Bemtevi</button>
-        <button class="tecla tecla_clap">Canário</button>
-        <button class="tecla tecla_tim">Pardal</button>
+        <button class="tecla tecla_pom">Arara</button>
+        <button class="tecla tecla_clap">Papagaio</button>
+        <button class="tecla tecla_tim">Calopsita</button>
 
-        <button class="tecla tecla_puff">Calopsita</button>
-        <button class="tecla tecla_splash">Sabiá</button>
-        <button class="tecla tecla_toim">Arara</button>
+        <button class="tecla tecla_puff">Pardal</button>
+        <button class="tecla tecla_splash">Canário</button>
+        <button class="tecla tecla_toim">Bemtevi</button>
 
-        <button class="tecla tecla_psh">Papagaio</button>
-        <button class="tecla tecla_tic">Pica-Pau</button>
-        <button class="tecla tecla_tom">Stop</button>
+        <button class="tecla tecla_psh">Sabiá</button>
+        <button class="tecla tecla_tic">Picapau</button>
+        <button class="tecla tecla_tom">STOP</button>
     </section>
 
-    <audio src="sounds/bemtevi.mp3" id="som_tecla_pom"></audio>
-    <audio src="sounds/canarinho.mp3" id="som_tecla_clap"></audio>
-    <audio src="sounds/pardal.mp3" id="som_tecla_tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+    <audio src="sounds/arara.mp3" id="som_tecla_pom"></audio>
+    <audio src="sounds/papagaio.mp3" id="som_tecla_clap"></audio>
+    <audio src="sounds/calopsita.mp3" id="som_tecla_tim"></audio>
+    <audio src="sounds/pardal.mp3" id="som_tecla_puff"></audio>
+    <audio src="sounds/canário.mp3" id="som_tecla_splash"></audio>
+    <audio src="sounds/bemtevi.mp3" id="som_tecla_toim"></audio>
+    <audio src="sounds/sabia.mp3" id="som_tecla_psh"></audio>
+    <audio src="sounds/picapau.mp3" id="som_tecla_tic"></audio>
+    <audio src="sounds/" id="som_tecla_tom"></audio>
 
     <script src="main.js"></script>
 
